// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "./proto";
option java_multiple_files = true;
option java_package = "dev.collablite";
option java_outer_classname = "CollabLiteProto";

package collabproto;

// The CollabLite service definition.
service CollabLite {

  rpc AddPropertyToDocument (AddUpdatePropertyRequest) returns (StatusResponse) {}
  rpc UpdatePropertyToDocument (AddUpdatePropertyRequest) returns (StatusResponse) {}
  rpc RemovePropertyFromDocument (RemovePropertyRequest) returns (StatusResponse) {}
  rpc ImportDocument (ImportRequest) returns (StatusResponse) {}
  rpc GetDocument (GetRequest) returns (GetResponse) {}
  rpc ListDocuments (ListRequest) returns (ListResponse) {}

}

////////////////////////////
// Assumption is identifying user is done outside of the messages
////////////////////////////

// AddUpdatePropertyRequest used for both add and update
// object_id is assigned when added to DB.
// object_name is friendly name.
message AddUpdatePropertyRequest {
  string object_id = 1;
  string object_name = 2;
  string property_path = 3;
  bytes data = 4;
}

// RemovePropertyRequest used to remove a property from a document
message RemovePropertyRequest {
  string object_id = 1;
  string object_name = 2;
  string property_path = 3;
}


// ImportRequest imports entire JSON(-ish) document into the database
message ImportRequest {
  string object_name = 1;
  bytes data = 2;
}

// GetRequest gets the entire object
message GetRequest {
  string object_id = 1;
}

message GetResponse {
  string object_id = 1;
  string object_name = 2;
  bytes data = 3;
}

// ListRequest lists all objects (for user).
message ListRequest {
  // unsure... what goes here?
}

// Response response to update requests
message StatusResponse {
  string message = 1;
  int32 code = 2;
}


// ListResponse is just id/name... maybe dates?
message ListResponse {
  string object_id = 1;
  string object_name = 2;
}
